@@ -4,7 +4,6 @@
 # Created:      02.12.2002
 # RCS-ID:       $Id$
 
-import wx
 from wxPython.wx import *
 from wxPython.xrc import *
 try:
@@ -18,8 +17,10 @@ import sys
 progname = 'XRCed'
 version = '0.1.5-2'
 # Can be changed to set other default encoding different
-#defaultEncoding = sys.getdefaultencoding()
-defaultEncoding = wx.GetDefaultPyEncoding()
+defaultEncoding = ''
+# you comment above and can uncomment this:
+#import wx
+#defaultEncoding = wx.GetDefaultPyEncoding()
 
 try:
     True
