@@ -11,33 +11,25 @@
           <object class="sizeritem">
             <object class="wxTextCtrl" name="TEXT">
               
-              
               <size>250,100</size>
-              
               
               <style>wxTE_MULTILINE</style>
             </object>
             
-            
             <option>1</option>
             
-            
             <flag>wxALL|wxEXPAND</flag>
-            
             
             <border>5</border>
           </object>
         </object>
         
-        
         <option>1</option>
-        
         
         <flag>wxEXPAND</flag>
       </object>
       <object class="sizeritem">
         <object class="wxStaticLine"/>
-        
         
         <flag>wxEXPAND</flag>
       </object>
@@ -47,31 +39,24 @@
           <object class="sizeritem">
             <object class="wxButton" name="wxID_OK">
               
-              
               <label>OK</label>
-              
               
               <default>1</default>
             </object>
             
-            
             <flag>wxRIGHT</flag>
-            
             
             <border>10</border>
           </object>
           <object class="sizeritem">
             <object class="wxButton" name="wxID_CANCEL">
               
-              
               <label>Cancel</label>
             </object>
           </object>
         </object>
         
-        
         <flag>wxALL|wxALIGN_CENTRE_HORIZONTAL</flag>
-        
         
         <border>10</border>
       </object>
@@ -90,16 +75,12 @@
           <object class="sizeritem">
             <object class="wxListBox" name="LIST">
               
-              
               <content/>
             </object>
             
-            
             <option>1</option>
             
-            
             <flag>wxTOP|wxBOTTOM|wxLEFT|wxEXPAND</flag>
-            
             
             <border>5</border>
           </object>
@@ -109,76 +90,59 @@
               <object class="sizeritem">
                 <object class="wxButton" name="BUTTON_UP">
                   
-                  
                   <label>Move Up</label>
                 </object>
                 
-                
                 <flag>wxBOTTOM|wxEXPAND</flag>
-                
                 
                 <border>5</border>
               </object>
               <object class="sizeritem">
                 <object class="wxButton" name="BUTTON_DOWN">
                   
-                  
                   <label>Move Down</label>
                 </object>
-                
                 
                 <flag>wxEXPAND</flag>
               </object>
               <object class="spacer">
                 
-                
                 <size>10,20</size>
-                
                 
                 <option>1</option>
               </object>
               <object class="sizeritem">
                 <object class="wxButton" name="BUTTON_APPEND">
                   
-                  
                   <label>Append...</label>
                 </object>
                 
-                
                 <flag>wxBOTTOM|wxEXPAND</flag>
-                
                 
                 <border>5</border>
               </object>
               <object class="sizeritem">
                 <object class="wxButton" name="BUTTON_REMOVE">
                   
-                  
                   <label>Remove</label>
                 </object>
-                
                 
                 <flag>wxEXPAND</flag>
               </object>
             </object>
             
-            
             <flag>wxALL|wxEXPAND</flag>
-            
             
             <border>5</border>
           </object>
         </object>
         
-        
         <option>1</option>
-        
         
         <flag>wxEXPAND</flag>
       </object>
       <object class="sizeritem">
         <object class="wxStaticLine"/>
-        
         
         <flag>wxEXPAND</flag>
       </object>
@@ -188,31 +152,24 @@
           <object class="sizeritem">
             <object class="wxButton" name="wxID_OK">
               
-              
               <label>OK</label>
-              
               
               <default>1</default>
             </object>
             
-            
             <flag>wxRIGHT</flag>
-            
             
             <border>10</border>
           </object>
           <object class="sizeritem">
             <object class="wxButton" name="wxID_CANCEL">
               
-              
               <label>Cancel</label>
             </object>
           </object>
         </object>
         
-        
         <flag>wxALL|wxALIGN_CENTRE_HORIZONTAL</flag>
-        
         
         <border>10</border>
       </object>
@@ -231,16 +188,12 @@
           <object class="sizeritem">
             <object class="wxCheckListBox" name="CHECK_LIST">
               
-              
               <content/>
             </object>
             
-            
             <option>1</option>
             
-            
             <flag>wxTOP|wxBOTTOM|wxLEFT|wxEXPAND</flag>
-            
             
             <border>5</border>
           </object>
@@ -250,76 +203,59 @@
               <object class="sizeritem">
                 <object class="wxButton" name="BUTTON_UP">
                   
-                  
                   <label>Move Up</label>
                 </object>
                 
-                
                 <flag>wxBOTTOM|wxEXPAND</flag>
-                
                 
                 <border>5</border>
               </object>
               <object class="sizeritem">
                 <object class="wxButton" name="BUTTON_DOWN">
                   
-                  
                   <label>Move Down</label>
                 </object>
-                
                 
                 <flag>wxEXPAND</flag>
               </object>
               <object class="spacer">
                 
-                
                 <size>10,20</size>
-                
                 
                 <option>1</option>
               </object>
               <object class="sizeritem">
                 <object class="wxButton" name="BUTTON_APPEND">
                   
-                  
                   <label>Append...</label>
                 </object>
                 
-                
                 <flag>wxBOTTOM|wxEXPAND</flag>
-                
                 
                 <border>5</border>
               </object>
               <object class="sizeritem">
                 <object class="wxButton" name="BUTTON_REMOVE">
                   
-                  
                   <label>Remove</label>
                 </object>
-                
                 
                 <flag>wxEXPAND</flag>
               </object>
             </object>
             
-            
             <flag>wxALL|wxEXPAND</flag>
-            
             
             <border>5</border>
           </object>
         </object>
         
-        
         <option>1</option>
-        
         
         <flag>wxEXPAND</flag>
       </object>
       <object class="sizeritem">
         <object class="wxStaticLine"/>
-        
         
         <flag>wxEXPAND</flag>
       </object>
@@ -329,31 +265,24 @@
           <object class="sizeritem">
             <object class="wxButton" name="wxID_OK">
               
-              
               <label>OK</label>
-              
               
               <default>1</default>
             </object>
             
-            
             <flag>wxRIGHT</flag>
-            
             
             <border>10</border>
           </object>
           <object class="sizeritem">
             <object class="wxButton" name="wxID_CANCEL">
               
-              
               <label>Cancel</label>
             </object>
           </object>
         </object>
         
-        
         <flag>wxALL|wxALIGN_CENTRE_HORIZONTAL</flag>
-        
         
         <border>10</border>
       </object>
@@ -368,28 +297,21 @@
       <object class="sizeritem">
         <object class="wxCheckListBox" name="CHECK_LIST">
           
-          
           <content/>
           
-          
           <size>250,250</size>
-          
           
           <style></style>
         </object>
         
-        
         <option>1</option>
         
-        
         <flag>wxALL|wxEXPAND</flag>
-        
         
         <border>5</border>
       </object>
       <object class="sizeritem">
         <object class="wxStaticLine"/>
-        
         
         <flag>wxEXPAND</flag>
       </object>
@@ -399,31 +321,24 @@
           <object class="sizeritem">
             <object class="wxButton" name="wxID_OK">
               
-              
               <label>OK</label>
-              
               
               <default>1</default>
             </object>
             
-            
             <flag>wxRIGHT</flag>
-            
             
             <border>10</border>
           </object>
           <object class="sizeritem">
             <object class="wxButton" name="wxID_CANCEL">
               
-              
               <label>Cancel</label>
             </object>
           </object>
         </object>
         
-        
         <flag>wxALL|wxALIGN_CENTRE_HORIZONTAL</flag>
-        
         
         <border>10</border>
       </object>
@@ -442,22 +357,16 @@
           <object class="sizeritem">
             <object class="wxListBox" name="LIST">
               
-              
               <content/>
               
-              
               <size>80,100</size>
-              
               
               <style>wxLB_SORT</style>
             </object>
             
-            
             <option>1</option>
             
-            
             <flag>wxALL|wxALIGN_CENTRE_HORIZONTAL</flag>
-            
             
             <border>10</border>
           </object>
@@ -467,42 +376,33 @@
               <object class="sizeritem">
                 <object class="wxButton" name="BUTTON_ADD">
                   
-                  
                   <label>Add...</label>
                 </object>
                 
-                
                 <flag>wxBOTTOM</flag>
-                
                 
                 <border>3</border>
               </object>
               <object class="sizeritem">
                 <object class="wxButton" name="BUTTON_REMOVE">
                   
-                  
                   <label>Remove</label>
                 </object>
               </object>
             </object>
             
-            
             <flag>wxALL|wxALIGN_CENTRE_HORIZONTAL</flag>
-            
             
             <border>5</border>
           </object>
         </object>
         
-        
         <option>1</option>
-        
         
         <flag>wxEXPAND</flag>
       </object>
       <object class="sizeritem">
         <object class="wxStaticLine"/>
-        
         
         <flag>wxEXPAND</flag>
       </object>
@@ -512,31 +412,24 @@
           <object class="sizeritem">
             <object class="wxButton" name="wxID_OK">
               
-              
               <label>OK</label>
-              
               
               <default>1</default>
             </object>
             
-            
             <flag>wxBOTTOM</flag>
-            
             
             <border>5</border>
           </object>
           <object class="sizeritem">
             <object class="wxButton" name="wxID_CANCEL">
               
-              
               <label>Cancel</label>
             </object>
           </object>
         </object>
         
-        
         <flag>wxALL|wxALIGN_CENTRE_HORIZONTAL</flag>
-        
         
         <border>10</border>
       </object>
@@ -554,16 +447,13 @@
           <object class="sizeritem">
             <object class="wxRadioButton" name="RADIO_STD">
               
-              
               <label>art:</label>
             </object>
-            
             
             <flag>wxALIGN_CENTRE_VERTICAL</flag>
           </object>
           <object class="sizeritem">
             <object class="wxComboBox" name="COMBO_STD">
-              
               
               <content>
                 <item>wxART_ADD_BOOKMARK</item>
@@ -616,19 +506,15 @@
               </content>
             </object>
             
-            
             <flag>wxRIGHT|wxEXPAND</flag>
-            
             
             <border>5</border>
           </object>
           <object class="sizeritem">
             <object class="wxRadioButton" name="RADIO_FILE">
               
-              
               <label>file:</label>
             </object>
-            
             
             <flag>wxALIGN_CENTRE_VERTICAL</flag>
           </object>
@@ -638,37 +524,29 @@
               <object class="sizeritem">
                 <object class="wxTextCtrl" name="TEXT_FILE"/>
                 
-                
                 <option>1</option>
                 
-                
                 <flag>wxRIGHT|wxEXPAND</flag>
-                
                 
                 <border>5</border>
               </object>
               <object class="sizeritem">
                 <object class="wxButton" name="BUTTON_BROWSE">
                   
-                  
                   <label>Browse...</label>
-                  
                   
                   <size>40,-1d</size>
                 </object>
               </object>
             </object>
             
-            
             <flag>wxRIGHT|wxEXPAND</flag>
-            
             
             <border>5</border>
           </object>
           <vgap>2</vgap>
           <growablecols>1</growablecols>
         </object>
-        
         
         <flag>wxEXPAND</flag>
       </object>
